# human-signals

./: .gitignore  README.md
sw/: pyproject.toml
sw/ocr_imu/: README.md
sw/ocr_imu/python/: BLE-inference-plotting.py  BLE_char_recognition.ipynb  dintegration_test.py  prompted-BLE-104.py  prompted_record.py  realtime-inference.py  record_data.py  stream_imu.py
sw/ocr_imu/python/BLE_model_runs/98_acc_128len_cnnbilstm_run_20260413_111857/: metadata.json
sw/ocr_imu/python/imu_testing_scripts/: 104attempt.py  104attempt2.py  read_imu_bin.py  riqt.py
sw/ocr_imu/python/model_runs/78_acc_cnn_run_20260312_003648/: imu_char_cnn.keras
sw/ocr_imu/python/model_runs/88_acc_cnn_run_20260312_013433/: metadata.json
sw/preliminary_imu_code/: recording1_X_20260420_202001_0001.csv  recording2_H_20260420_202359_0001.csv
sw/preliminary_imu_code/arduino/MG24-BLE-stream-sketch_apr7a/: MG24-BLE-stream-sketch_apr7a.ino
sw/preliminary_imu_code/arduino/SeeedIMU-MG24-Example/: SeeedIMU-MG24-Example.ino
sw/preliminary_imu_code/python/: BLE-realtime-inference.py  char_recognition.ipynb  fixed_window.py  prompted_record.py  readme.md  realtime-inference.py  record_data.py  results.txt  stream_imu.py  stream_imu_wireless.py  stream_imu_wireless416.py
sw/preliminary_imu_code/python/imu_testing_scripts/: d.py  read_imu.py  read_imu_qt.py  ri2.py  rtpyqt3.py
sw/src/: __init__.py  calibrate_writer_threshold.py  main.py  writer_id_onnx.py  writer_id_torch.py
sw/src/onnx/: style_encoder.onnx  style_encoder.onnx.data  upgrade.py
(+11282 files in other folders)
